cmake_minimum_required(VERSION 3.15)
project(Chapter18)

set(CMAKE_CXX_STANDARD 17)

#add_executable(Chapter18 main.cpp)
add_executable(Chapter18_Try Chapter18_Try01.cc)
add_executable(Chapter18_Drill02 Chapter18_Drill02.cc)
add_executable(Chapter18_01 Chapter18_01.cc)
add_executable(Chapter18_02 Chapter18_02.cc)
add_executable(Chapter18_03 Chapter18_03.cc)
add_executable(Chapter18_04 Chapter18_04.cc)
add_executable(Chapter18_04_Revised Chapter18_04_Revised.cc)
add_executable(Chapter18_05 Chapter18_05.cc)
add_executable(Chapter18_06 Chapter18_06.cc)
add_executable(Chapter18_07 Chapter18_07.cc)
add_executable(Chapter18_08 Chapter18_08.cc)
add_executable(Chapter18_10 Chapter18_10.cc)
add_executable(Wumpus Test_Wumpus.cpp Chapter18_12.cc)
add_executable(TestPortableRNG TestPortableRNG.cpp)